k8s/fastapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
  namespace: fastapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      nodeSelector:
        role: api
      containers:
        - name: fastapi
          image: tech2026/rag-api:v25
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
